# mooncry

./: .gitattributes  .gitignore  ARCHITECTURE.md  GIT_SETUP.md  LICENSE  PERFORMANCE_ANALYSIS.md  QUICK_GIT.md  QUICK_START.md  README.md  STRESS_TEST_REPORT.md  TEST_PLAN.md  TEST_REPORT.md  TEST_RESULTS.md  check_env.bat  init_git.bat  init_git.ps1  moon.mod  moon.mod.json  quick_verify.sh  requirements.txt  run_tests.py  sha256_test  validate.py
config/: config.py
crypto/: CMakeLists.txt  __init__.py  build.py
crypto/include/: financial_crypto.h
crypto/src/: aes256.c  hmac.c  sha256.c  sha256_test.c  utils.c
cryptoult/: README.mbt.md  cryptoult.mbt  cryptoult_test.mbt  moon.mod  sha256test.mbt
examples/: auto_stress_test.py  lightweight_test.py  performance_test.py  stress_test_client.py  stress_test_server.py  test_crypto.py
lib/: aes_diff_test.mbt  base64.mbt  bench_test.mbt  blake2.mbt  blake2_bench_test.mbt  blake2_test.mbt  blake3.mbt  blake3_test.mbt  chacha20.mbt  chacha20_poly1305.mbt  chacha20_poly1305_test.mbt  crypto.mbt  crypto_test.mbt  ctr_shake_bench_test.mbt  ctr_shake_test.mbt  hash_stream.mbt  hex_pub_test.mbt  kdf.mbt  md5.mbt  phase1_test.mbt  poly1305.mbt  poly1305_test.mbt  readme_example_test.mbt  sha3.mbt  sha3_bench_test.mbt  sha3_stream.mbt  sha3_stream_test.mbt  sha3_test.mbt  sha512.mbt  shake_stream_test.mbt
moonbit_crypto/: API_DESIGN_SUMMARY.md  API_DOCUMENTATION.md  ARCHITECTURE.md  COMPLETE_GUIDE.md  DOCS_INDEX.md  DOCS_INDEX_V2.md  INSTALL_GUIDE.md  MANUAL_INSTALL.md  PERFORMANCE_ANALYSIS.md  PERFORMANCE_OPTIMIZATION.md  (+52 more)
(+49 files in other folders)
